k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: devops-api
spec:
  selector:
    app: devops-api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
